Fix attribution overflow

--- a/app/assets/styles/global/_inpage.scss
+++ b/app/assets/styles/global/_inpage.scss
@@ -2,12 +2,8 @@
    Global: Inpage
    ========================================================================== */
 
-.inpage {
-
-}
-
 .inpage__header {
-  padding: ($global-spacing * 2) 0;
+  padding: 0 0 ($global-spacing * 2) 0;
 }
 
 .inpage__header,
