--- a/app/assets/styles/global/_page.scss
+++ b/app/assets/styles/global/_page.scss
@@ -114,9 +114,6 @@
 }
 
 .page__attribution {
-  @include column(12/12);
-  max-width: 48rem;
-
   > *:last-child {
     margin-bottom: 0;
   }
@@ -130,6 +127,7 @@
   padding: 0 0 ($global-spacing / 2) 0;
   box-shadow: 0 1px 0 0 rgba($base-color, 0.08);
   margin: 0 0 ($global-spacing * 2) 0;
+  clear: both;
 
   small {
     @extend .heading-alt;
@@ -147,7 +145,9 @@
   }
 
   a {
+    display: inline-block;
     color: inherit;
+    vertical-align: top;
   }
 
   img {
